[project]
name = "google_helper"
version = "0.0.1"
authors = [
  { name="Dean McCall", email="dean@themccallfamily.net" },
]
description = "Create a helper to export photos in an Google Photos album.  Module can be extended to assist with other Google API Services"
readme = "README.md"
requires-python = ">=3.11.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'google-api-core >= 2.11.0, < 3',
    'google-api-python-client >= 2.86.0, < 3',
    'google-auth >= 2.17.3, < 3',
    'google-auth-httplib2 >= 0.1.0, < 1',
    'google-auth-oauthlib >= 1.0.0, < 2',
    'googleapis-common-protos >= 1.59.0, < 2',
    'ipykernel >= 6.22.0, < 7',
    'pandas >= 2.0.0, < 3',
    'pytest >= 7.3.1, < 8'
]

[project.urls]
"Homepage" = "https://github.com/dean-mccall/google_helper"
"Bug Tracker" = "https://github.com/dean-mccall/google_helper/issues"